[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "age-analysis"
version = "0.1.0"
description = "My template for bioinformatics analyses in the forsberg lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harmonypy>=0.2.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.2",
    "pyrootutils>=1.0.4",
    "scanpy>=1.12",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
